# ModelGuard

./: .gitignore  README.md  out.ndjson  pyproject.toml  requirements.txt  run  sample_urls.txt  urls.txt
.github/workflows/: ci.yml
acme_cli/: __init__.py  hf_api.py  logging_utils.py  main.py  ndjson.py  repo_analysis.py  scoring.py  urls.py
acme_cli/metrics/: base.py  bus_factor.py  code_quality.py  dataset_code.py  dataset_quality.py  license.py  perf_claims.py  ramp_up.py  size_score.py
acme_cli/util/: parallel.py  timer.py
src/: logging_utils.py  main.py  url_handler.py
src/metrics/: _calibrate.py  availability_metric.py  base_metric.py  bus_factor_metric.py  calibrated_scores.py  code_quality_metric.py  dataset_quality_metric.py  expected_ranges.py  license_metric.py  metric.py  net_score.py  performance_claims_metric.py  ramp_up_metric.py  size_metric.py
tests/: conftest.py  test_base_metric.py  test_bert_additional.py  test_bert_model.py  test_calibration.py  test_cli.py  test_cli_output.py  test_code_quality.py  test_env_and_logging.py  test_logging.py  test_logging_invalid_path.py  test_main.py  test_main_extended.py  test_metric_modules.py  test_metrics.py  test_ndjson.py  test_net_score.py  test_size_detail_smoke.py  test_small_utils.py  test_unit_defaults.py  test_urls.py
