[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]
skip = [".venv", "venv", ".pytest_cache"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv", ".pytest_cache"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=src --cov-report=term-missing"
testpaths = ["tests"]
