[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
branch = false

[tool.coverage.report]
show_missing = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".venv", "venv", "build", "dist", ".git"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
